<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnKvizovi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_kvizovi"
        android:layout_marginVertical="16dp"
        />

    <Button
        android:id="@+id/btnNoviKviz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_novi_kviz"
        android:layout_marginVertical="16dp"
        />


    <Button
        android:id="@+id/btnPrijava"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_prijava"
        android:layout_marginVertical="16dp"
        />

    <TextView
        android:id="@+id/labelKorisnickoIme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:text="@string/labela_korisnicko_ime"
        />

    <EditText
        android:id="@+id/inputKorisnickoIme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />





</LinearLayout>