<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".IzmijeniKviz">

    <TextView
        android:id="@+id/labelaIzmjenaNaslovaKviza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labela_naziv_novi_kviz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputIzmjenaNazivaKviza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelaIzmjenaNaslovaKviza" />

    <Button
        android:id="@+id/spremiNoviNazivKviza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_spremi"
        app:layout_constraintBottom_toBottomOf="@+id/inputIzmjenaNazivaKviza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inputIzmjenaNazivaKviza"
        app:layout_constraintTop_toTopOf="@+id/inputIzmjenaNazivaKviza" />

    <Button
        android:id="@+id/btnDodajNovoPitanje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_novo_pitanje"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/inputIzmjenaNazivaKviza" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDodajNovoPitanje">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/questionsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>